Change welcome text to block letters

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:900|Spirax" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:900|Spirax|Oswald:600" rel="stylesheet">
 
   </head>
 
@@ -46,7 +46,7 @@
               </a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="mas.html" target="_blank">más</a>
+              <a class="nav-link" href="mas.html" target="_blank" style="font-family: Spirax; font-weight: 400; text-shadow: 0 0 4px #000; color: #fff; font-size: 1.5em; background-color: #645954; padding-top: 3px; padding-bottom: 3px; border-radius: 4px;">más</a>
             </li>
           </ul>
         </div>
@@ -60,7 +60,7 @@
         <div class="row">
         <div id="map"></div>
           <div class="col-lg-6">
-            <h1 class="mt-5">Barrio de las Letras</h1>
+            <h1 class="mt-5">La magia de Letras</h1>
             <script>
               mapboxgl.accessToken = 'pk.eyJ1Ijoia2F0aGVyaW5lZnBlcnJ5IiwiYSI6ImNqZzJxa2Z2OTI4bzQyd2xsdmRvZDhpb3AifQ.CQSkuewcazlee6t9OJ3FXg';
               var map = new mapboxgl.Map({
