Adjust Google Fonts link to fix the Oswald problem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Elsie+Swash+Caps:900|Spirax|Oswald:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600|Spirax" rel="stylesheet">
 
   </head>
 
