Addition of 'back to map' text

--- a/mas.html
+++ b/mas.html
@@ -14,6 +14,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/the-big-picture.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 
 <body>
@@ -21,7 +24,8 @@
     <div class="row">
         <div class="col-lg-8 mx-auto">
         	<h2 style="padding-top: 2em; margin-bottom: 10px">La magia de Letras // The magic of Letras</h2>
-            <h6 style="font-family: Work Sans, Helvetica; font-weight: 300; margin-top: 0px; margin-bottom: 15px"><br><br>(en)<br><br>I had the great fortune to live for a year in Letras while I taught English outside Madrid. I hoped to capture some of the magic that inspired me (and so frequently warmed my heart) as an expatriate in Spain.<br><br>I'm currently studying <a href="https://geography.uoregon.edu/profile/katip/">geography</a> at the University of Oregon — if you're interested in my work, feel free to jump to my <a href="http://www.katherinefperry.com/" target="_blank">portfolio</a>.<br><br>(custom basemap designed using Mapbox Studio)<br><br><br><br>(es)<br><br>He tenido la buena fortuna de vivir un año en el barrio de las Letras mientras enseñaba inglés en un pueblo fuera de Madrid. Espero compartir la magia que me inspiró (y que de verdad me dio mucha alegría) cuando vivía en España.<br><br>Ahora soy estudiante de <a href="https://geography.uoregon.edu/profile/katip/" target="_blank">geografía</a> en la Universidad de Oregon, y si le interesa más, visite mi <a href="http://www.katherinefperry.com/" target="_blank">página</a> personal.<br><br>(diseño a la medida del mapa hecho con Mapbox Studio)</h6>
+        	<h6 style="font-family: Work Sans, Helvetica; font-weight: 300; margin-top: 0px; margin-bottom: 15px"><a href="index.html"><i class="fas fa-arrow-circle-left"></i> </a><a href="index.html">Back to the map</a></h6>
+            <h6 style="font-family: Work Sans, Helvetica; font-weight: 300; margin-top: 0px; margin-bottom: 15px"><br><br>(en)<br><br>I had the great fortune to live for a year in Letras while I taught English outside Madrid. I hoped to capture some of the magic that inspired me (and so frequently warmed my heart) as an expatriate in Spain.<br><br>I'm currently studying <a href="https://geography.uoregon.edu/profile/katip/">geography</a> at the University of Oregon — if you're interested in my work, feel free to jump to my <a href="http://www.katherinefperry.com/" target="_blank">portfolio</a>.<br><br>(custom basemap designed using Mapbox Studio)<br><br><br><br>(es)<br><br>He tenido la buena fortuna de vivir un año en el barrio de las Letras mientras enseñaba inglés en un pueblo fuera de Madrid. Espero compartir la magia que me inspiró (y que de verdad me dio mucha alegría) cuando vivía en España.<br><br>Ahora soy estudiante de <a href="https://geography.uoregon.edu/profile/katip/" target="_blank">geografía</a> en la Universidad de Oregon, y si le interesa más, visite mi <a href="http://www.katherinefperry.com/" target="_blank">página</a> personal.<br><br>(diseño a la medida del mapa hecho con Mapbox Studio)<br><br><a href="index.html"><i class="fas fa-arrow-circle-left"></i> </a><a href="index.html">Back to the map</a></h6>
         </div>
     </div>
 </div>
